[package]
name = "jce"
version = "0.1.1"
edition = "2021"
authors = ["LaoLittle"]
description = "Jce implementation in Rust"
readme = "README.md"
keywords = ["jce", "serialization", "encoding"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/LaoLittle/rust-jce"
repository = "https://github.com/LaoLittle/rust-jce"

[features]
default = []
json = ["serde_json"]

[dependencies]
bytes = "1"
serde_json = { version = "1.0.149", optional = true }

[dependencies.jce-derive]
version = "0.1.1"
path = "jce-derive"

[dev-dependencies]
hex = "0.4"
